--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
   </dependencies>
 
   <build>
+    <finalName>1repo-maven</finalName>
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
